# m33-vehicle-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  fsl_debug_console_conf.h  hardware_init.c  main.c  neo_m9v_config.c  syscalls.c
app/header/: app.h  app_gps.h  app_l9966.h  app_selftest.h
app/src/: app_gps.c  app_init.c  app_l9966.c  app_selftest.c
cmake/: toolchain-arm-none-eabi.cmake
drivers/M9V-driver/include/: neo_m9v.h  neo_m9v_cfg_keys.h  neo_m9v_ubx_frame.h
drivers/M9V-driver/platform/esp32-bridge/: neo_m9v_esp32_bridge_transport.c  neo_m9v_esp32_bridge_transport.h
drivers/M9V-driver/platform/m33/board/: neo_m9v_m33_board_uart.c  neo_m9v_m33_board_uart.h
drivers/M9V-driver/platform/m33/transport/: neo_m9v_m33_transport.c  neo_m9v_m33_transport.h
drivers/M9V-driver/src/: neo_m9v_messages.c  neo_m9v_ubx_frame.c
drivers/M9V-driver/test/: neo_m9v_driver_test.c
drivers/l9966_driver/include/: L9966.h  L9966_FRAME.h  L9966_REGISTERS.h
drivers/l9966_driver/platform/linux/: L9966_SPIDEV_LINUX.c  L9966_SPIDEV_LINUX.h
drivers/l9966_driver/platform/m33/: L9966_TRANSPORT.c  L9966_TRANSPORT.h
drivers/l9966_driver/src/: L9966.c  L9966_FRAME.c
m9v/: neo_m9v.c
m9v/Include/: neo_m9v_config.h  neo_m9v_messages.h  neo_m9v_ubx_ids.h
platform/imx93_m33/header/: board_gpio.h  board_init.h  board_pins.h  board_spi.h  board_time.h
platform/imx93_m33/src/: board_gpio.c  board_init.c  board_pins.c  board_spi.c  board_time.c  board_uart.c
prototypes/gnss_rpmsg_bridge/: main_remote.c
prototypes/gnss_rpmsg_bridge/armgcc/: CMakeLists.txt  build_release.sh
prototypes/gnss_rpmsg_bridge/platform/imx93_m33/: board_uart.c  board_uart.h
